# Tabulator

./: .gitignore  README.md  asgi.py  pyproject.toml  requirements.txt  run_local.py  wsgi.py
instance/: line_by_row_presets.json
tabulator/: __init__.py  app.py  config.py  data_store.py  loader.py  routes.py
tabulator/static/: main.js  style.css
tabulator/templates/: base.html  index.html
