[tool.poetry]
name = "tabulator"
version = "0.1.0"
description = "A minimal Flask app to upload and parse tables into DataFrames for plotting."
authors = ["Greg Schwartz <greg@users.noreply.github.com>"]
readme = "README.md"
packages = [ { include = "tabulator" } ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0"
python-dotenv = "^1.0"
pandas = "^2.2"
scipy = "^1.11"
tables = "^3.9"  # required for pandas.read_hdf
h5py = "^3.10"
scikit-learn = "^1.3"
umap-learn = "^0.5.6"
hdbscan = "^0.8.33"
tensorflow = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
isort = "^5.13"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
